--- a/src/main/resources/templates/themes/default/footer.html
+++ b/src/main/resources/templates/themes/default/footer.html
@@ -36,7 +36,7 @@
                 <div class="meta-copyright-info">
                     <div class="info-text">
                         <a href="http://www.liuenci.cn" target="_blank" style="display: block;margin: 0 auto;" class="info-logo">
-                            <img style="display: block;margin: 0 auto;" th:src="@{/user/img/logo.png}" th:alt="${commons.site_title()}"/>
+                            <img style="display: block;margin: 0 auto;" th:src="@{/user/img/logo.png}" th:alt="${commons.siteTitle()}"/>
                         </a>
                         <br/>
                         <p>&copy; 版权所有 <a href="https://github.com/zhisheng17/blog" target="_blank"
